--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD="Almusu@123"
-DB_NAME=school
+DB_HOST=sql12.freesqldatabase.com
+DB_USER=sql12774671
+DB_PASSWORD="9dydqDFg6f"
+DB_NAME=sql12774671
